# duckdb

tools/pythonpkg/: CMakeLists.txt  anaconda_make  duckdb_python.cpp  setup.py
tools/pythonpkg/cpp_debug/: main.cpp  py_import_call_execute.c  py_import_call_execute.h
tools/pythonpkg/src/: pyconnection.cpp  pyrelation.cpp  pyresult.cpp
tools/pythonpkg/tests/fast/api/: test_duckdb_interrupt.py
